# Experimental-robotics-2

./: README.md  package.xml
Experimental-Robotics-1-main/: CMakeLists.txt  README.md  package.xml  setup.py
Experimental-Robotics-1-main/Topological_map/: topology_plot.owl
Experimental-Robotics-1-main/config/: param.yaml
Experimental-Robotics-1-main/launch/: survailence_robot.launch
Experimental-Robotics-1-main/msg/: Point.msg
Experimental-Robotics-1-main/scripts/: robot_brain(2).py  robot_brain.py  robot_brain2(2).py  robot_brain2.py  robot_state_machine(2).py  robot_state_machine.py
Experimental-Robotics-1-main/scripts/Expo_assignment_1/: architecture_name_mapper.py
Experimental-Robotics-1-main/srv/: FaultReport.srv  GetPose.srv  GetPoseResponse.srv  SetPose.srv  SetPoseResponse.srv
ass2/: CMakeLists.txt  package.xml
ass2/config/: fake_controllers.yaml  gazebo_mobile_manipulator.urdf  joint_limits.yaml  mobile_manipulator.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
ass2/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  gazebo.launch  (+11 more)
config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
docs/: .buildinfo  conf.py  index.rst  objects.inv
launch/: arm_gazebo_control.launch  assignment.launch  base_gazebo_control.launch  mobile_manipulator_gazebo.launch  slam_gmapping.launch
maps/: 12.yaml
scripts/: bug_m.py  nav.py  send_goal_to_arm.py  wall_follow.py
urdf/: mobile_manipulator.urdf  robot_arm.urdf  robot_base.urdf
(+7 files in other folders)
